--- a/frontend/ionic/www/templates/category.html
+++ b/frontend/ionic/www/templates/category.html
@@ -5,11 +5,8 @@
     </ion-nav-buttons>
     
     <ion-content>
-        <ion-list>
-            <ion-item data-ng-repeat="product in products" ui-sref="Main.Product({productId:product.id})">
-                {{product.name}}
-            </ion-item>
-        </ion-list>
+        <h1>{{category.name}}</h1>
+        <h3>{{category.description}}</h3>
     </ion-content>
     
 </ion-view>
