--- a/frontend/ionic/www/templates/dashboard.html
+++ b/frontend/ionic/www/templates/dashboard.html
@@ -1,25 +1,27 @@
 <ion-view title="{{navBarHeader}}">
 
+    <!-- Left-Menu toggle button -->
     <ion-nav-buttons side="left">
-
-        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-
+        <button menu-toggle="left" class="button button-icon icon ion-navicon-round"></button>
     </ion-nav-buttons>
+
+    <!-- Right-Menu toggle button -->
+    <ion-nav-buttons side="right">
+        <button menu-toggle="right" class="button button-icon icon ion-grid"></button>
+    </ion-nav-buttons>
+
     <ion-content has-header="true" padding="true">
 
         <h3>Dashboard</h3>
 
     </ion-content>
 
-    <div class="tabs tabs-icon-only">
-        <a nav-clear class="tab-item disable-user-behavior active" title="Home" ui-sref="snd.home">
-            <i class="icon ion-home"></i><span class="tab-title ng-binding" ng-bind-html="title"></span>
+    <div class="tabs tabs-icon-top">
+        <a nav-clear class="tab-item disable-user-behavior active" ui-sref="Main.Dashboard">
+            <i class="icon ion-home"></i>Home
         </a>
-        <a nav-clear class="tab-item disable-user-behavior" title="Chat" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline" ui-sref="snd.chat">
-            <i class="icon ion-chatbubbles"></i><span class="tab-title ng-binding" ng-bind-html="title"></span>
-        </a>
-        <a nav-clear class="tab-item disable-user-behavior" title="Drink" icon-on="ion-ios7-filing" icon-off="ion-ios7-filing-outline" ui-sref="snd.drink">
-            <i class="icon ion-wineglass"></i><span class="tab-title ng-binding" ng-bind-html="title"></span>
+        <a nav-clear class="tab-item disable-user-behavior" ui-sref="Main.Account">
+            <i class="icon ion-locked"></i>Account
         </a>
     </div>
 </ion-view>
