--- a/frontend/ionic/www/templates/main.html
+++ b/frontend/ionic/www/templates/main.html
@@ -3,7 +3,7 @@
     <ion-side-menu-content>
 
         <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
-            <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i>
+            <ion-nav-back-button class="button-icon button-clear"><i class="icon ion-chevron-left"></i>
             </ion-nav-back-button>
         </ion-nav-bar>
 
@@ -13,10 +13,13 @@
 
     <ion-side-menu side="left">
 
-        <ion-header-bar class="bar bar-header bar-assertive">
-            <h1 class="title">Category</h1>
+        <!-- Category Top-Header Bar -->
+        <ion-header-bar align-title="left" class=" bar-positive">
+            <h1 class="title" side="left">Category</h1>
+            <button class="button icon-left ion-filing" ui-sref="Main.Categories" data-ng-click="toggleLeft()">Manage</button>
         </ion-header-bar>
 
+        <!-- Category Filter Sub-Header Bar -->
         <ion-header-bar class="bar bar-subheader bar-stable item-input-inset">
             <label class="item-input-wrapper">
                 <i class="icon ion-ios-search placeholder-icon"></i>
@@ -27,17 +30,34 @@
             </label>
         </ion-header-bar>
 
+        <!-- Category List -->
         <ion-content has-header="true">
-            <ion-list>
-                <ion-item data-ng-repeat="category in categories" data-ng-click="toggleLeft()" ui-sref="Main.CategoryProducts({ contactId: category.id })">
-                    {{category.name}}
-                </ion-item>
-            </ion-list>
+            <ul class="list">
+                <a class="item" data-ng-repeat="category in categories" data-ng-click="toggleLeft()" ui-sref="Main.CategoryProducts({ categoryId: category.id })">
+                {{category.name}}
+                </a>
+            </ul>
         </ion-content>
 
-        <ion-footer-bar class="bar bar-footer">
-            <a class="button button-fullwidth" ui-sref="snd.policy" data-ng-click="toggleLeft()">Privacy Policy</a>
-        </ion-footer-bar>
+    </ion-side-menu>
+
+    <ion-side-menu side="right">
+
+        <ion-header-bar class="bar bar-header bar-positive">
+            <h1 class="title">Settings</h1>
+        </ion-header-bar>
+
+        <ion-content has-header="true">
+            <ul class="list">
+                <div class="item item-divider">Account</div>
+                <a class="item item-button-right" ui-sref="Main.SignIn" data-ng-click="toggleRight()">
+                   {{acountMenuHeader}}
+                    <button class="button button-assertive" data-ng-click="doSignOut()">
+                        <i class="icon ion-log-out"></i>
+                    </button>
+               </a>
+            </ul>
+        </ion-content>
 
     </ion-side-menu>
 
