--- a/frontend/ionic/www/templates/product.html
+++ b/frontend/ionic/www/templates/product.html
@@ -1,5 +1,11 @@
 <ion-view view-title="{{navBarHeader}}">
-  <ion-content>
-    <h1>Product</h1>
-  </ion-content>
+   
+    <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
+    
+    <ion-content>
+        <h1>Product</h1>
+    </ion-content>
+    
 </ion-view>
