--- a/frontend/ionic/www/templates/productList.html
+++ b/frontend/ionic/www/templates/productList.html
@@ -1,4 +1,7 @@
 <ion-view view-title="{{navBarHeader}}">
+   <ion-nav-buttons side="left">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+    </ion-nav-buttons>
     <ion-content>
         <ion-list>
             <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
