--- a/frontend/ionic/www/templates/product.html
+++ b/frontend/ionic/www/templates/product.html
@@ -1,11 +1,13 @@
 <ion-view view-title="{{navBarHeader}}">
-   
+
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
-    
-    <ion-content>
-        <h1>Product</h1>
+
+    <ion-content padding="true">
+        <h3>{{product.name}}</h3>
+        <h5>was {{product.originalPrice}}</h5>
+        <h5>now {{product.price}}</h5>
     </ion-content>
-    
+
 </ion-view>
