--- a/frontend/ionic/www/templates/category.html
+++ b/frontend/ionic/www/templates/category.html
@@ -9,4 +9,8 @@
         <h3>{{category.description}}</h3>
     </ion-content>
     
+    <ion-footer>
+        
+    </ion-footer>
+    
 </ion-view>
