--- a/frontend/ionic/www/templates/main.html
+++ b/frontend/ionic/www/templates/main.html
@@ -7,14 +7,14 @@
             </ion-nav-back-button>
         </ion-nav-bar>
 
-        <ion-nav-view name="main" animation="slide-left-right"></ion-nav-view>
+        <ion-nav-view name="main" animation="none"></ion-nav-view>
 
     </ion-side-menu-content>
 
     <ion-side-menu side="left">
 
         <!-- Category Top-Header Bar -->
-        <ion-header-bar align-title="left" class=" bar-positive">
+        <ion-header-bar align-title="left" class=" bar-assertive">
             <h1 class="title" side="left">Category</h1>
             <button class="button icon-left ion-filing" ui-sref="Main.Categories" data-ng-click="toggleLeft()">Manage</button>
         </ion-header-bar>
@@ -43,20 +43,31 @@
 
     <ion-side-menu side="right">
 
-        <ion-header-bar class="bar bar-header bar-positive">
+        <ion-header-bar class="bar bar-header bar-assertive">
             <h1 class="title">Settings</h1>
         </ion-header-bar>
 
         <ion-content has-header="true">
-            <ul class="list">
+            <div class="list">
+
                 <div class="item item-divider">Account</div>
+
                 <a class="item item-button-right" ui-sref="Main.SignIn" data-ng-click="toggleRight()">
-                   {{acountMenuHeader}}
+                    {{acountMenuHeader}}
                     <button class="button button-assertive" data-ng-click="doSignOut()">
                         <i class="icon ion-log-out"></i>
                     </button>
-               </a>
-            </ul>
+                </a>
+
+                <div class="item item-divider">Admin</div>
+                <a class="item item-icon-left" ui-sref="Main.Admin" data-ng-click="toggleRight()">
+                    <i class="icon ion-settings"></i>Control Panel
+                </a>
+                <a class="item item-icon-left" ui-sref="Main.Admin" data-ng-click="toggleRight()">
+                    <i class="icon ion-clipboard"></i> Notifications
+                    <span class="badge badge-assertive">{{notificationCount}}</span>
+                </a>
+            </div>
         </ion-content>
 
     </ion-side-menu>
