--- a/frontend/ionic/www/templates/signin.html
+++ b/frontend/ionic/www/templates/signin.html
@@ -2,17 +2,15 @@
 
     <ion-content has-header="true" padding="true">
 
-        <ion-list>
+        <div class="list list-inset">
 
             <label class="item item-input">
                 <i class="icon ion-person placeholder-icon"></i>
-
                 <input type="text" placeholder="Username" data-ng-model="signin.username">
             </label>
 
             <label class="item item-input">
                 <i class="icon ion-locked placeholder-icon"></i>
-
                 <input type="password" placeholder="Password" data-ng-model="signin.password">
             </label>
 
@@ -20,7 +18,7 @@
 
             <button class="button button-full button-positive" ui-sref="Main.SignUp">Sign-up new Account</button>
 
-        </ion-list>
+        </div>
 
     </ion-content>
 
