--- a/frontend/ionic/www/templates/signup.html
+++ b/frontend/ionic/www/templates/signup.html
@@ -2,29 +2,26 @@
    
     <ion-content has-header="true" padding="true">
        
-        <ion-list>
+        <div class="list list-inset">
            
             <label class="item item-input">
                 <i class="icon ion-email placeholder-icon"></i>
-
                 <input type="text" placeholder="Email" data-ng-model="signin.email">
             </label>
             
             <label class="item item-input">
                 <i class="icon ion-person placeholder-icon"></i>
-
                 <input type="text" placeholder="Username" data-ng-model="signin.username">
             </label>
 
             <label class="item item-input">
                 <i class="icon ion-locked placeholder-icon"></i>
-
                 <input type="password" placeholder="Password" data-ng-model="signin.password">
             </label>
             
             <button class="button button-full button-positive">Submit</button>
             
-        </ion-list>
+        </div>
         
     </ion-content>
     
