Implemented role-based for angular-ui-router by adding AuthenticationService and IdentityService used when user tries to sign-in the app.

--- a/frontend/ionic/www/templates/home.html
+++ b/frontend/ionic/www/templates/home.html
@@ -25,7 +25,7 @@
                 <i class="icon ion-star"></i>What's New
             </a>
             <a nav-clear class="tab-item disable-user-behavior" ui-sref="Main.Popular">
-                <i class="icon icon-heart"></i> Most Popular
+                <i class="icon ion-heart"></i> Most Popular
             </a>
         </div>
     </div>
