--- a/frontend/ionic/www/templates/signin.html
+++ b/frontend/ionic/www/templates/signin.html
@@ -14,6 +14,13 @@
                 <input type="password" placeholder="Password" data-ng-model="signin.password">
             </label>
 
+            <div class="item item-checkbox">
+                <label class="checkbox">
+                    <input type="checkbox">
+                </label>
+                Remember me?
+            </div>
+
             <button class="button button-full button-balanced" data-ng-click="doSignIn()">Sign-in</button>
 
             <button class="button button-full button-positive" ui-sref="Main.SignUp">Sign-up new Account</button>
